manual/disconnected-demo/4.ocp/httpd-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-example
  name: httpd-example
  namespace: httpd-example
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpd-example
  sessionAffinity: None
  type: ClusterIP
