manual/disconnected-demo/4.ocp/httpd-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
     cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: httpd-example
  name: httpd-example
  namespace: httpd-example
spec:
  ingressClassName: openshift-default
  rules:
  - host: httpd-example-httpd-example.apps.vqmpz.dynamic.redhatworkshops.io
    http:
      paths:
      - backend:
          service:
            name: httpd-example
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - httpd-example-httpd-example.apps.vqmpz.dynamic.redhatworkshops.io
    secretName: httpd-example-tls
